4. Create CRUD functionality and templates for Corporation model (UPDATE step).
- Create edit.html template for editing an existing corporation
- Implement EditCorporationView for handling corporation editing
- Added URL route for corporation editing in `corporation/urls.py`
- Enhance 'home.html' with user-specific messages:
  - prompt users without corporations to register a new one.
  - direct users with corporations to their profile for editing details.

fix: update 'corporation/new.html' to display a success message upon successful
     registration of a corporation.

--- a/corporation/templates/corporation/detail.html
+++ b/corporation/templates/corporation/detail.html
@@ -19,6 +19,7 @@
     </p>
     <div>
       <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
+      <a href="{% url 'corporation:edit' corporation.pk %}" class="btn btn-warning">Edit</a>
     </div>
   {% else %}
     {% include "users/403_csrf.html" %}
