--- a/corporation/templates/corporation/detail.html
+++ b/corporation/templates/corporation/detail.html
@@ -20,6 +20,7 @@
     <div>
       <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
       <a href="{% url 'corporation:edit' corporation.pk %}" class="btn btn-warning">Edit</a>
+      <a href="{% url 'corporation:delete' corporation.id %}" class="btn btn-danger">Delete</a>
     </div>
   {% else %}
     {% include "users/403_csrf.html" %}
