Fix djLint error in GitHub actions
- pip install djLint
- launch djlint on the whole project
- use djlint reformat command

--- a/corporation/templates/corporation/delete.html
+++ b/corporation/templates/corporation/delete.html
@@ -1,25 +1,28 @@
 {% extends "base.html" %}
+
 {% block title %}
   Delete corporation
 {% endblock title %}
 {% block content %}
-{% if user.is_authenticated %}
-  <div>
-    <form method="POST">
-      {% csrf_token %}
-      <fieldset>
-        <p>
-          <legend><h2>Delete: "{{ corporation.corporation_name }}"</h2></legend>
-        </p>
-        <p>
-          <strong>Are you sure you would like to delete it?</strong>
-        </p>
-      </fieldset>
-      <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
-      <button type="submit" class="btn btn-danger">Delete</button>
-    </form>
-  </div>
-{% else %}
-  {% include "users/403_csrf.html" %}
-{% endif %}
+  {% if user.is_authenticated %}
+    <div>
+      <form method="POST">
+        {% csrf_token %}
+        <fieldset>
+          <p>
+            <legend>
+              <h2>Delete: "{{ corporation.corporation_name }}"</h2>
+            </legend>
+          </p>
+          <p>
+            <strong>Are you sure you would like to delete it?</strong>
+          </p>
+        </fieldset>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-danger">Delete</button>
+      </form>
+    </div>
+  {% else %}
+    {% include "users/403_csrf.html" %}
+  {% endif %}
 {% endblock content %}
