--- a/corporation/templates/corporation/detail.html
+++ b/corporation/templates/corporation/detail.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
+
 {% block title %}
   {{ corporation.corporation_name }}
 {% endblock title %}
-
 {% block content %}
   {% if user.is_authenticated %}
     <div class="container mt-4">
@@ -12,28 +12,20 @@
       <div class="mt-3 row">
         <div class="col-md-2 fw-bold">Owned by:</div>
         <div class="col-md-9">{{ corporation.user }}</div>
-
         <div class="col-md-2 fw-bold">Sector:</div>
         <div class="col-md-9">{{ corporation.sector }}</div>
-
         <div class="col-md-2 fw-bold">Address:</div>
         <div class="col-md-9">{{ corporation.address }}</div>
-
         <div class="col-md-2 fw-bold">Phone number:</div>
         <div class="col-md-9">{{ corporation.phone_number }}</div>
-
         <div class="col-md-2 fw-bold">Email:</div>
         <div class="col-md-9">
           <a href="mailto:{{ corporation.email }}">{{ corporation.email }}</a>
         </div>
-
         <div class="col-md-2 fw-bold">Webpage:</div>
         <div class="col-md-9">
-          {% if corporation.url %}
-            <a href="{{ corporation.url }}" target="_blank">{{ corporation.url }}</a>
-          {% endif %}
+          {% if corporation.url %}<a href="{{ corporation.url }}" target="_blank">{{ corporation.url }}</a>{% endif %}
         </div>
-
         <div class="col-md-2 fw-bold">LinkedIn:</div>
         <div class="col-md-9">
           {% if corporation.linkedin %}
@@ -43,8 +35,10 @@
       </div>
       <div class="mt-4">
         <a href="{% url 'home' %}" class="btn btn-primary me-2">Back</a>
-        <a href="{% url 'corporation:edit' corporation.pk %}" class="btn btn-warning me-2">Edit</a>
-        <a href="{% url 'corporation:delete' corporation.id %}" class="btn btn-danger">Delete</a>
+        <a href="{% url 'corporation:edit' corporation.pk %}"
+           class="btn btn-warning me-2">Edit</a>
+        <a href="{% url 'corporation:delete' corporation.id %}"
+           class="btn btn-danger">Delete</a>
       </div>
     </div>
   {% else %}
