--- a/project/templates/users/user_detail.html
+++ b/project/templates/users/user_detail.html
@@ -9,39 +9,30 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h2>
-        
-        
-          {{ object.username }}
-        
-      </h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
-      {% if corporation %}
-        <p>
-          Corporation: <a href="{% url 'corporation:detail' corporation.pk %}">{{ corporation.corporation_name }}</a>
-        </p>
-      {% else %}
-        <p>No corporation associated with this user.</p>
-      {% endif %}
-    </div>
-  </div>
-  {% if object == request.user %}
-    <!-- Action buttons -->
-    <div class="row">
-      <div class="col-sm-12">
-        <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-        <a class="btn btn-primary"
-           href="{% url 'account_email' %}"
-           role="button">E-Mail</a>
-        <a class="btn btn-primary"
-           href="{% url 'mfa_index' %}"
-           role="button">MFA</a>
-        <!-- Your Stuff: Custom user template urls -->
+        <h2>{{ object.username }}</h2>
+        {% if object.name %}<p>{{ object.name }}</p>{% endif %}
+        {% if corporation %}
+          <p>
+            Corporation: <a href="{% url 'corporation:detail' corporation.pk %}">{{ corporation.corporation_name }}</a>
+          </p>
+        {% else %}
+          <p>No corporation associated with this user.</p>
+        {% endif %}
       </div>
     </div>
-    <!-- End Action buttons -->
-  {% endif %}
-</div>
+    {% if object == request.user %}
+      <!-- Action buttons -->
+      <div class="row">
+        <div class="col-sm-12">
+          <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
+          <a class="btn btn-primary"
+             href="{% url 'account_email' %}"
+             role="button">E-Mail</a>
+          <a class="btn btn-primary" href="{% url 'mfa_index' %}" role="button">MFA</a>
+          <!-- Your Stuff: Custom user template urls -->
+        </div>
+      </div>
+      <!-- End Action buttons -->
+    {% endif %}
+  </div>
 {% endblock content %}
